# summaryeval

./: .gitignore  LICENSE  README.md  evalsummary.py  main.py  pyproject.toml  rouge_coherence_scorer.py
